Skeleton screens Pull to refresh

--- a/app/src/main/res/layout/follow_fragment.xml
+++ b/app/src/main/res/layout/follow_fragment.xml
@@ -97,158 +97,158 @@
                 />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-<!--        <com.facebook.shimmer.ShimmerFrameLayout-->
-<!--            android:id="@+id/shimmerFrame"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:visibility="gone"-->
-<!--            >-->
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmerFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            >
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-<!--                <androidx.constraintlayout.widget.Guideline-->
-<!--                    android:id="@+id/dummyguideline_start"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="vertical"-->
-<!--                    app:layout_constraintGuide_begin="10dp" />-->
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/dummyguideline_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_begin="10dp" />
 
-<!--                <androidx.constraintlayout.widget.Guideline-->
-<!--                    android:id="@+id/dummyguideline_end"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="vertical"-->
-<!--                    app:layout_constraintGuide_end="10dp" />-->
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/dummyguideline_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_end="10dp" />
 
-<!--                <androidx.constraintlayout.widget.Guideline-->
-<!--                    android:id="@+id/dummyguideline_top"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="horizontal"-->
-<!--                    app:layout_constraintGuide_begin="10dp" />-->
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/dummyguideline_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_begin="10dp" />
 
-<!--                <androidx.constraintlayout.widget.Guideline-->
-<!--                    android:id="@+id/dummyguideline_bottom"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="horizontal"-->
-<!--                    app:layout_constraintGuide_end="10dp" />-->
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/dummyguideline_bottom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_end="10dp" />
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/dummybackBtn"-->
-<!--                    android:layout_width="35dp"-->
-<!--                    android:layout_height="35dp"-->
-<!--                    android:scaleType="fitXY"-->
-<!--                    android:padding="5dp"-->
-<!--                    android:src="@drawable/back_arrow"-->
-<!--                    android:elevation="25dp"-->
-<!--                    android:contentDescription="@string/none"-->
-<!--                    app:layout_constraintTop_toTopOf="@id/dummyguideline_top"-->
-<!--                    app:layout_constraintStart_toStartOf="@id/dummyguideline_start"-->
-<!--                    />-->
+                <ImageView
+                    android:id="@+id/dummybackBtn"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:scaleType="fitXY"
+                    android:padding="5dp"
+                    android:src="@drawable/back_arrow"
+                    android:elevation="25dp"
+                    android:contentDescription="@string/none"
+                    app:layout_constraintTop_toTopOf="@id/dummyguideline_top"
+                    app:layout_constraintStart_toStartOf="@id/dummyguideline_start"
+                    />
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:id="@+id/dummybutton2"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:layout_margin="5dp"-->
-<!--                    app:cardCornerRadius="10dp"-->
-<!--                    app:cardBackgroundColor="@color/black_3"-->
-<!--                    app:layout_constraintTop_toBottomOf="@id/dummybackBtn"-->
-<!--                    app:layout_constraintEnd_toStartOf="@+id/dummybutton"-->
-<!--                    app:layout_constraintHorizontal_bias="0.5"-->
-<!--                    app:layout_constraintStart_toStartOf="@+id/dummyguideline_start" />-->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/dummybutton2"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/black_3"
+                    app:layout_constraintTop_toBottomOf="@id/dummybackBtn"
+                    app:layout_constraintEnd_toStartOf="@+id/dummybutton"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="@+id/dummyguideline_start" />
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:id="@+id/dummybutton"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:layout_margin="5dp"-->
-<!--                    app:cardCornerRadius="10dp"-->
-<!--                    app:cardBackgroundColor="@color/black_3"-->
-<!--                    app:layout_constraintTop_toBottomOf="@id/dummybackBtn"-->
-<!--                    app:layout_constraintEnd_toStartOf="@+id/dummyguideline_end"-->
-<!--                    app:layout_constraintHorizontal_bias="0.5"-->
-<!--                    app:layout_constraintStart_toEndOf="@+id/dummybutton2" />-->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/dummybutton"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/black_3"
+                    app:layout_constraintTop_toBottomOf="@id/dummybackBtn"
+                    app:layout_constraintEnd_toStartOf="@+id/dummyguideline_end"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/dummybutton2" />
 
-<!--                <LinearLayout-->
-<!--                    android:id="@+id/dummyfollowSwipeLayout"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="0dp"-->
-<!--                    android:orientation="vertical"-->
-<!--                    app:layout_constraintEnd_toStartOf="@+id/dummyguideline_end"-->
-<!--                    app:layout_constraintStart_toStartOf="@+id/dummyguideline_start"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/dummybutton"-->
-<!--                    app:layout_constraintBottom_toBottomOf="@id/dummyguideline_bottom"-->
-<!--                    >-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="100dp"-->
-<!--                        android:layout_margin="10dp"-->
-<!--                        app:cardCornerRadius="10dp"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        />-->
-<!--                </LinearLayout>-->
+                <LinearLayout
+                    android:id="@+id/dummyfollowSwipeLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toStartOf="@+id/dummyguideline_end"
+                    app:layout_constraintStart_toStartOf="@+id/dummyguideline_start"
+                    app:layout_constraintTop_toBottomOf="@+id/dummybutton"
+                    app:layout_constraintBottom_toBottomOf="@id/dummyguideline_bottom"
+                    >
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardBackgroundColor="@color/black_3"
+                        />
+                </LinearLayout>
 
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--        </com.facebook.shimmer.ShimmerFrameLayout>-->
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
