--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
     <color name="black_1">#423F3F</color>
     <color name="black_2">#6A6767</color>
-    <color name="black_3">#9A9797</color>
+    <color name="black_3">#C0BEBE</color>
     <color name="red">#FF0000</color>
 
 
