--- a/app/src/main/res/layout/users_fragment.xml
+++ b/app/src/main/res/layout/users_fragment.xml
@@ -227,86 +227,86 @@
         </androidx.cardview.widget.CardView>
 
 
-<!--        <com.facebook.shimmer.ShimmerFrameLayout-->
-<!--            android:id="@+id/shimmerFrame"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            app:cardCornerRadius="10dp"-->
-<!--            android:elevation="10dp"-->
-<!--            android:visibility="gone"-->
-<!--            app:layout_constraintEnd_toEndOf="@id/guideline_end"-->
-<!--            app:layout_constraintStart_toStartOf="@id/guideline_start"-->
-<!--            app:layout_constraintTop_toTopOf="@id/guideline_top"-->
-<!--            >-->
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmerFrame"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="10dp"
+            android:elevation="10dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/guideline_end"
+            app:layout_constraintStart_toStartOf="@id/guideline_start"
+            app:layout_constraintTop_toTopOf="@id/guideline_top"
+            >
 
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:paddingTop="10dp">-->
-<!--                <RelativeLayout-->
-<!--                    android:id="@+id/topdummy"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="250dp"-->
-<!--                    android:padding="20dp"-->
-<!--                    >-->
-<!--                    <androidx.cardview.widget.CardView-->
-<!--                        android:id="@+id/dummyImageCard"-->
-<!--                        android:layout_width="150dp"-->
-<!--                        android:layout_height="150dp"-->
-<!--                        app:cardCornerRadius="100dp"-->
-<!--                        android:layout_centerHorizontal="true"-->
-<!--                        app:cardBackgroundColor="@color/black_3"-->
-<!--                        >-->
-<!--                    </androidx.cardview.widget.CardView>-->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="10dp">
+                <RelativeLayout
+                    android:id="@+id/topdummy"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:padding="20dp"
+                    >
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/dummyImageCard"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        app:cardCornerRadius="100dp"
+                        android:layout_centerHorizontal="true"
+                        app:cardBackgroundColor="@color/black_3"
+                        >
+                    </androidx.cardview.widget.CardView>
 
-<!--                    <View-->
-<!--                        android:id="@+id/dummyuserName"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="20dp"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_centerHorizontal="true"-->
-<!--                        android:layout_below="@+id/dummyImageCard"-->
-<!--                        android:background="@color/black_3"-->
-<!--                        />-->
+                    <View
+                        android:id="@+id/dummyuserName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@+id/dummyImageCard"
+                        android:background="@color/black_3"
+                        />
 
-<!--                    <View-->
-<!--                        android:id="@+id/dummyname"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="20dp"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_centerHorizontal="true"-->
-<!--                        android:layout_below="@+id/dummyuserName"-->
-<!--                        android:background="@color/black_3"-->
-<!--                        />-->
-<!--                </RelativeLayout>-->
+                    <View
+                        android:id="@+id/dummyname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@+id/dummyuserName"
+                        android:background="@color/black_3"
+                        />
+                </RelativeLayout>
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:id="@+id/dummydescriptionCard"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="80dp"-->
-<!--                    app:cardCornerRadius="10dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:elevation="35dp"-->
-<!--                    app:cardBackgroundColor="@color/black_3"-->
-<!--                    android:layout_below="@+id/topdummy"-->
-<!--                    >-->
-<!--                </androidx.cardview.widget.CardView>-->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/dummydescriptionCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_marginTop="10dp"
+                    android:elevation="35dp"
+                    app:cardBackgroundColor="@color/black_3"
+                    android:layout_below="@+id/topdummy"
+                    >
+                </androidx.cardview.widget.CardView>
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:id="@+id/dummyfollow"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="80dp"-->
-<!--                    app:cardCornerRadius="10dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:elevation="35dp"-->
-<!--                    app:cardBackgroundColor="@color/black_3"-->
-<!--                    android:layout_below="@+id/dummydescriptionCard"-->
-<!--                    >-->
-<!--                </androidx.cardview.widget.CardView>-->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/dummyfollow"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_marginTop="10dp"
+                    android:elevation="35dp"
+                    app:cardBackgroundColor="@color/black_3"
+                    android:layout_below="@+id/dummydescriptionCard"
+                    >
+                </androidx.cardview.widget.CardView>
 
 
-<!--            </RelativeLayout>-->
-<!--        </com.facebook.shimmer.ShimmerFrameLayout>-->
+            </RelativeLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
